--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body>
-    <header>
+    <header class="header">
          <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -18,6 +18,16 @@
                 <li><a href=""><button class="btn-primary">Hire Me</button></a></li>
             </ul>
          </nav>
+         <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greeting">Hi,I am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis repellat numquam praesentium tenetur autem iusto molestiae.</p>
+                <button class="btn-primary">Doenload CV</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="profile-pic" src="images/hardy.png" alt="">
+         </div>
     </header>
     <main>
 
