--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="banner-content">
                 <h3 class="banner-greeting">Hi,I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis repellat numquam praesentium tenetur autem iusto molestiae.</p>
+                <p class="banner-description">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis repellat numquam praesentium tenetur autem iusto molestiae.</p>
                 <button class="btn-primary">Doenload CV</button>
                 <button class="btn-primary">Contact</button>
             </div>
@@ -30,10 +30,13 @@
          </div>
     </header>
     <main>
-
+       <section class="about">
+        <h3 class="section-title">About Me</h3>
+        <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum est veniam quae amet laboriosam corrupti voluptatem, consequatur quasi optio tempora, eaque tempore rem nisi pariatur.</p>
+       </section>
     </main>
     <footer>
 
     </footer>
 </body>
-</html>
+</html> 
