added about information

--- a/index.html
+++ b/index.html
@@ -33,6 +33,25 @@
        <section class="about">
         <h3 class="section-title">About Me</h3>
         <p class="section-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum est veniam quae amet laboriosam corrupti voluptatem, consequatur quasi optio tempora, eaque tempore rem nisi pariatur.</p>
+
+        <div class="about-info-container">
+            <div class="about-info">
+                <h4 class="info-title">Name:</h4>
+                <p class="info-descripion">Mary Hardy </p>
+            </div>
+            <div class="about-info">
+                <h4 class="info-title">Email:</h4>
+                <p class="info-descripion">info@gmail.com</p>
+            </div>
+            <div class="about-info">
+                <h4 class="info-title">Date of birth:</h4>
+                <p class="info-descripion">11 November 1987</p>
+            </div>
+            <div class="about-info">
+                <h4 class="info-title">From:</h4>
+                <p class="info-descripion">Los Angeles, USA</p>
+            </div>
+           </div>
        </section>
     </main>
     <footer>
@@ -40,3 +59,9 @@
     </footer>
 </body>
 </html> 
+
+
+
+
+
+
