--- a/index.html
+++ b/index.html
@@ -59,8 +59,11 @@
 
         <p id="what-i-do-description" class="section-description">
             I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+
         </p>
-         <div class="skill-containar">
+
+         <div class="skills-container">
+
             <div class="skill">
                 <img src="images/icons/js.png" alt="">
                 <h3 class="skill-title">Vanilla JavaScript</h3>
@@ -82,6 +85,59 @@
                 <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
             </div>
          </div>
+       </section>
+       <!--Resume Section-->
+
+       <section>
+        <h3 class="section-title">A summary of my Rrsume</h3>
+        <div class="resume-container">
+            <div class="resume-colume">
+                <h3 class="resume-colume-taitel">My Education</h3>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                    <h3 class="resume-item-institution">Harvard University / 2015 - 2017</h3>
+                    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                    <h3 class="resume-item-institution">Harvard University / 2015 - 2017</h3>
+                    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">Master in Computer Engineering</h2>
+                    <h3 class="resume-item-institution">Harvard University / 2015 - 2017</h3>
+                    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+            <div class="resume-colume">
+                <h3 class="resume-colume-taitel">My Experience</h3>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">SR. Font End Developer</h2>
+                    <h3 class="resume-item-institution">Apple Inc / 2020 - Current</h3>
+                    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">SR. Font End Developer</h2>
+                    <h3 class="resume-item-institution">Apple Inc / 2020 - Current</h3>
+                    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h2 class="resume-item-title">HTML Developer</h2>
+                    <h3 class="resume-item-institution">Adobe Inc / 2017 - 2018</h3>
+                    <p class="resume-item-description">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </div>
        </section>
     </main>
     <footer>
