--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
             </div>
          </div>
        </section>
+
        <!--Resume Section-->
 
        <section>
@@ -138,6 +139,10 @@
                 </div>
             </div>
         </div>
+
+          <div class="btn-primary-fotter">
+            <button class="btn-primary">Doenload</button>
+          </div>
        </section>
     </main>
     <footer>
