--- a/index.html
+++ b/index.html
@@ -162,6 +162,13 @@
 
        <div class="footer-column">
         <h3 class="section-title">Let’s Message me</h3>
+        <form class="contact">
+            <input type="text" placeholder="your name">
+            <input type="email" placeholder="your email">
+            <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+
+        <input type="submit" value="submit" class="btn-primary" id="btn-id">
+        </form>
         
        </div>
     </footer>
